<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">顶牛物联</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">UUID 0xffe8接收:</string>
    <string name="label_device_address">MAC地址:</string>
    <string name="label_state">连接状态:</string>
    <string name="no_data">No data</string>
    <string name="connected">已连接</string>
    <string name="connecting">连接中....</string>
    <string name="disconnected">断开连接</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="TXD">发送数据:</string>
 


    
    
    
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">连接设备</string>
    <string name="menu_disconnect">断开连接</string>
    <string name="menu_scan">扫描设备</string>
    <string name="menu_stop">停止扫描</string>

    
    
</resources>
